[workspace]
members = [
	"crypto",
	"beacon",
	"blockchain",
	"blockchain/common/rocksdb",
	"blockchain/lmd-ghost",
	"blockchain/network",
	"utils/ssz",
	"utils/ssz/derive",
	"utils/keccak-hasher",
	"substrate/casper/srml",
	"substrate/casper/consensus",
	"substrate/casper/primitives",
	"substrate/casper/template",
	"yamltests/ssztests",
	"yamltests/transitiontests",
]
exclude = [
	"beacon/wasm",
	"vendor"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
