[workspace]
members = [
	"crypto",
	"beacon",
	"common/libp2p-rpc",
	"blockchain",
	"blockchain/common/rocksdb",
	"blockchain/lmd-ghost",
	"blockchain/network",
	"blockchain/network/messages",
	"blockchain/runtime",
	"utils/ssz",
	"utils/ssz/derive",
	"utils/keccak-hasher",
	"substrate/frame/attestations",
	"yamltests",
]
exclude = [
	"beacon/wasm",
	"substrate",
	"vendor"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
