[package]
name = "beacon"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Minimal Serenity beacon chain implementation"
license = "GPL-3.0"
edition = "2018"

[dependencies]
primitive-types = { version = "0.4", default-features = false }
impl-serde = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "4.0", optional = true, features = ["derive"] }
ssz = { version = "0.1", path = "../utils/ssz", default-features = false, features = ["derive"] }
bm-le = { version = "0.6", default-features = false, features = ["derive"] }
fixed-hash = { version = "0.3.0", default-features = false }
sha2 = { version = "0.8", default-features = false }
digest = "0.8"
vecarray = "0.1"
generic-array = "0.12"
typenum = "1.10"

[features]
default = ["std", "with-serde", "with-codec"]
std = [
	"ssz/std",
	"bm-le/std",
	"primitive-types/std",
	"sha2/std",
	"fixed-hash/std",
	"vecarray/std",
	"parity-codec/std",
]
with-serde = [
	"serde",
	"impl-serde",
	"primitive-types/serde",
	"vecarray/serde",
]
with-codec = [
	"vecarray/parity-codec",
]
