[package]
name = "shasper-blockchain"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Blockchain interface for Shasper beacon chain."
edition = "2018"

[dependencies]
clap = "2.32"
lmd-ghost = { path = "lmd-ghost" }
beacon = { path = "../beacon" }
parity-codec = { version = "3.0", features = ["derive"] }
crypto = { package = "shasper-crypto", path = "../crypto" }
blockchain = "0.7"
blockchain-network-simple = "0.3"
ssz = { path = "../utils/ssz" }
sha2 = "0.8"
bls-aggregates = { git = "https://github.com/sigp/signature-schemes" }
rand = "0.6"
rocksdb = "0.12"
