[package]
name = "shasper-blockchain"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Blockchain interface for Shasper beacon chain."
edition = "2018"

[dependencies]
clap = "2.32"
lmd-ghost = { path = "lmd-ghost" }
beacon = { path = "../beacon" }
parity-codec = { version = "4.0", features = ["derive"] }
crypto = { package = "shasper-crypto", path = "../crypto" }
shasper-network = { path = "network" }
shasper-runtime = { path = "runtime" }
blockchain = { version = "0.9", path = "../vendor/blockchain" }
blockchain-network = { version = "0.1", path = "../vendor/blockchain/network" }
blockchain-rocksdb = { version = "0.1", path = "common/rocksdb" }
ssz = { path = "../utils/ssz" }
sha2 = "0.8"
bls-aggregates = { git = "https://github.com/sigp/signature-schemes" }
rand = "0.6"
rocksdb = "0.12"
bm-le = { version = "0.11", path = "../vendor/bm/le", features = ["derive"] }
pretty_env_logger = "0.3"
log = "0.4"
