[package]
name = "casper"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
parity-codec-derive = "3.0"
hash-db = { version = "0.11", default-features = false }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
plain_hasher = "0.2"

[features]
default = ["std"]
std = [
	"hash-db/std",
	"parity-codec/std",
	"serde",
	"serde_derive",
	"serde_json",
]
