[package]
name = "shasper-crypto"
version = "0.1.0"
authors = ["Wei Tang <hi@that.world>"]
edition = "2018"

[dependencies]
bls-crate = { package = "bls-aggregates", git = "https://github.com/sigp/signature-schemes", default-features = false }
beacon = { path = "../beacon", default-features = false }

[features]
default = ["std"]
std = [
	"bls-crate/std",
	"beacon/std",
]
