[package]
name = "shasper-executor"
version = "0.1.0"
authors = ["Parity Team <admin@parity.io>"]

[dependencies]
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
shasper-runtime = { path = "../runtime" }
