[package]
name = "lmd-ghost"
version = "0.1.0"
authors = ["Parity Team <admin@parity.io>"]

[dependencies]
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
shasper-primitives = { path = "../primitives", default-features = false }

[features]
default = ["std"]
std = ["shasper-primitives/std", "sr-std/std"]
