[package]
name = "network"
version = "0.1.0"
authors = ["Parity Team <admin@parity.io>"]

[dependencies]
log = "0.4"
shasper-runtime = { path = "../runtime" }
substrate-network = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
