[package]
name = "shasper-primitives"
version = "0.1.0"
authors = ["Parity Team <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-codec-derive = { version = "3.0" }
parity-codec = { version = "3.0", default-features = false }
fixed-hash = { version = "0.3.0", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
primitive-types = { version = "0.2", default-features = false, features = ["codec", "serde"] }
impl-serde = { version = "0.1", optional = true }
crypto = { package = "shasper-crypto", path = "../crypto", default-features = false }
ssz = { path = "../util/ssz", default-features = false }
ssz-hash = { path = "../util/ssz-hash", default-features = false }
ssz-derive = { path = "../util/ssz-derive", default-features = false }
ssz-hash-derive = { path = "../util/ssz-hash-derive", default-features = false }
hash-db = { version = "0.11", default-features = false }
keccak-hasher = { path = "../util/keccak-hasher", default-features = false }
byteorder = { version = "1.2", default-features = false }
casper = { path = "../casper", default-features = false }

[features]
default = ["std"]
std = [
	"fixed-hash/std",
	"parity-codec/std",
	"serde",
	"serde/std",
	"serde_derive",
	"crypto/std",
	"ssz/std",
	"ssz-hash/std",
	"hash-db/std",
	"keccak-hasher/std",
	"byteorder/std",
	"casper/std",
	"primitive-types/std",
	"impl-serde",
]
