[package]
name = "shasper-primitives"
version = "0.1.0"
authors = ["Parity Team <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
parity-codec-derive = "3.0"
fixed-hash = { version = "0.3.0", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
primitive-types = { version = "0.2", default-features = false, features = ["codec"] }
impl-serde = { version = "0.1", optional = true }
crypto = { package = "shasper-crypto", path = "../crypto", default-features = false }
ssz = { path = "../utils/ssz", default-features = false }
ssz-derive = { path = "../utils/ssz-derive", default-features = false }
hash-db = { version = "0.11", default-features = false }
keccak-hasher = { path = "../utils/keccak-hasher", default-features = false }
byteorder = { version = "1.2", default-features = false }
casper = { path = "../casper", default-features = false }
beacon = { path = "../beacon", default-features = false, features = ["with-codec"] }

[features]
default = ["std"]
std = [
	"fixed-hash/std",
	"parity-codec/std",
	"serde",
	"serde/std",
	"serde_derive",
	"crypto/std",
	"ssz/std",
	"hash-db/std",
	"keccak-hasher/std",
	"byteorder/std",
	"casper/std",
	"primitive-types/std",
	"primitive-types/serde",
	"impl-serde",
	"beacon/std",
	"beacon/std-with-codec",
	"beacon/with-serde",
]
