[package]
name = "beacon-primitives"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Minimal Serenity beacon chain implementation"
license = "GPL-3.0"
edition = "2018"

[dependencies]
primitive-types = { version = "0.4", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
impl-serde = { version = "0.1", optional = true }
parity-codec = { version = "4.0", optional = true, features = ["derive"] }
ssz = { version = "0.2", path = "../utils/ssz", default-features = false, features = ["derive"] }
fixed-hash = { version = "0.3.0", default-features = false }
bm-le = { version = "0.11", path = "../vendor/bm/le", default-features = false, features = ["derive"] }
generic-array = "0.12"
typenum = "1.10"

[features]
default = ["std", "with-serde", "with-codec"]
std = [
	"bm-le/std",
	"ssz/std",
	"parity-codec/std",
	"primitive-types/std",
	"fixed-hash/std",
]
with-serde = [
	"serde",
	"impl-serde",
	"primitive-types/serde",
	"bm-le/with-serde",
]
with-codec = [
	"parity-codec",
	"bm-le/with-codec",
]
