[package]
name = "shasper-runtime"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
integer-sqrt = { git = "https://github.com/paritytech/integer-sqrt-rs.git" }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "2.0", default-features = false }
parity-codec-derive = "2.0"
shasper-primitives = { path = "../primitives", default-features = false }
substrate-client = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-aura = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-consensus = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-executive = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-version = { git = "https://github.com/paritytech/substrate", default-features = false }
rustc-hex = { version = "1.0", optional = true }
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
substrate-keyring = { git = "https://github.com/paritytech/substrate", optional = true }

[features]
default = ["std"]
std = [
	"hex-literal",
	"rustc-hex",
	"parity-codec/std",
	"shasper-primitives/std",
	"substrate-client/std",
	"sr-std/std",
	"sr-io/std",
    "srml-aura/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-executive/std",
	"sr-primitives/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-upgrade-key/std",
	"substrate-consensus-aura-primitives/std",
	"sr-version/std",
	"substrate-keyring",
	"serde_derive",
	"serde",
	"serde/std",
	"safe-mix/std"
]
