[package]
name = "serenity"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
primitives = { package = "shasper-primitives", path = "../primitives", default-features = false }
casper = { path = "../casper", default-features = false }
keccak-hasher = { path = "../util/keccak-hasher", default-features = false }

[features]
default = ["std"]
std = [
	"primitives/std",
	"casper/std",
	"keccak-hasher/std",
]
