[package]
name = "serenity"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
primitives = { package = "shasper-primitives", path = "../primitives", default-features = false }
hash-db = { version = "0.11", default-features = false }
tiny-keccak = "1.4.2"
plain_hasher = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
ssz = { version = "0.1.1", path = "../util/ssz", default-features = false }
ssz-derive = { version = "0.1.1", path = "../util/ssz-derive" }

[features]
default = ["std"]
std = [
	"primitives/std",
	"ssz/std",
	"hash-db/std",
	"serde/std",
	"plain_hasher/std",
]
