[package]
name = "shasper-service"
version = "0.1.0"
authors = ["Parity Team <admin@parity.io>"]

[dependencies]
shasper-runtime = { path = "../runtime" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate" }
substrate-service = { git = "https://github.com/paritytech/substrate" }
