[package]
name = "shasper-transaction-pool"
version = "0.1.0"
authors = ["Parity Team <admin@parity.io>"]

[dependencies]
shasper-runtime = { path = "../runtime" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate" }
