[package]
name = "yamltests"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
clap = "2.32"
primitives = { package = "shasper-primitives", path = "../primitives" }
serenity = { path = "../serenity" }
