[package]
name = "yamltests"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
ssz = { path = "../utils/ssz" }
bm-le = { version = "0.11", path = "../vendor/bm/le" }
beacon = { path = "../beacon" }
sha2 = "0.8"
clap = "2.32"
crypto = { package = "shasper-crypto", path = "../crypto" }
