[package]
name = "beacon-wasm"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Minimal Serenity beacon chain implementation compiled to WebAssembly"
license = "GPL-3.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.48"

[workspace]
