[package]
name = "beacon-wasm"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Minimal Serenity beacon chain implementation compiled to WebAssembly"
license = "GPL-3.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.48"
js-sys = "0.3.25"
beacon = { path = ".." }
bm-le = { version = "0.8", default-features = false, features = ["derive"] }
serde_json = "1.0"
serde = "1.0"

[workspace]
