[package]
name = "eth2"
version = "0.2.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Minimal Serenity beacon chain implementation compiled to WebAssembly"
license = "GPL-3.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.48", features = ["serde-serialize"] }
beacon = { path = ".." }
serde = "1.0"

[workspace]
