[package]
name = "shasper-consensus-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for Aura consensus"
edition = "2018"

[dependencies]
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = "3.0"
substrate-client = { package = "substrate-client", git = "https://github.com/paritytech/substrate", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
runtime-support = { package = "srml-support", git = "https://github.com/paritytech/substrate", default-features = false }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
runtime-version = { package = "sr-version", git = "https://github.com/paritytech/substrate", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false }
primitives = { package = "shasper-primitives", path = "../../primitives", default-features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate", default-features = false }
casper = { path = "../../casper", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-client/std",
	"substrate-primitives/std",
	"runtime-support/std",
	"runtime-primitives/std",
	"runtime-version/std",
	"runtime-io/std",
	"primitives/std",
	"rstd/std",
	"inherents/std",
	"casper/std",
]
