[package]
name = "shasper-runtime"
version = "0.1.0"
authors = ["Parity Team <admin@parity.io>"]

[dependencies]
blake2 = "0.7"
tiny-keccak = "1.4.2"
hash-db = { git = "https://github.com/paritytech/trie", default-features = false }
plain_hasher = { version = "0.2", default-features = false }
parity-codec = { version = "2.0", default-features = false }
parity-codec-derive = { version = "2.0", default-features = false }
ssz = { path = "../../util/ssz", default-features = false }
ssz-derive = { path = "../../util/ssz-derive", default-features = false }
ssz-hash = { path = "../../util/ssz-hash", default-features = false }
ssz-hash-derive = { path = "../../util/ssz-hash-derive", default-features = false }
bls = { git = "https://github.com/sorpaas/bls", default-features = false }
bls-aggregates = { git = "https://github.com/sorpaas/signature-schemes", default-features = false }
shuffling = { path = "../../util/shuffling", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-version = { git = "https://github.com/paritytech/substrate", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
byteorder = { version = "1.2", default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = []
std = [
	"hash-db/std",
	"plain_hasher/std",
	"parity-codec/std",
	"parity-codec-derive/std",
	"ssz/std",
	"ssz-derive/std",
	"ssz-hash/std",
	"ssz-hash-derive/std",
	"bls/std",
	"bls-aggregates/std",
	"shuffling/std",
	"substrate-primitives/std",
	"sr-primitives/std",
	"sr-io/std",
	"sr-version/std",
	"sr-std/std",
	"srml-support/std",
	"serde",
	"serde_derive"
]

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
