[package]
name = "shasper-runtime-wasm"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
shasper-runtime = { path = "..", default-features = false }

[features]
default = []
std = [
	"shasper-runtime/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
