[package]
name = "srml-casper"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }

[dev-dependencies]
sr-io = { git = "https://github.com/paritytech/substrate" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sr-primitives/std",
	"srml-support/std",
	"system/std",
	"balances/std",
]
